--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,110 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: lightgray;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.options-menu {
+  display: flex;
+  background-color: rgb(235, 235, 235);
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  width: 50%;
+}
+
+.options-menu h1 {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  color: #333;
+}
+
+.options-menu p {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+@media screen and (max-width: 600px) {
+  .options-menu h1 {
+    font-size: 24px;
+  }
+
+  .options-menu p {
+    font-size: 16px;
+  }
+}
+
+.options-form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.options-form select {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.options-form p {
+  margin: 0;
+  padding: 0;
+  margin-right: 10px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+}
+
+.options-form input[type="text"] {
+  width: 10%;
+  padding: 12px 10px;
+  margin: 8px;
+  display: inline-block;
+  border: 1px solid;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.options-form button {
+  width: 10%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 0px;
+  margin: 8px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.error {
+    border-color: red;
+}
+
+.no-error {
+    border-color: #ccc;
+}
+
+.options-form button:hover {
+  background-color: #45a049;
 }
 
 @keyframes App-logo-spin {
