--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-  width: 50%;
+  width: 80%;
 }
 
 .options-menu h1 {
@@ -56,7 +56,7 @@
 }
 
 .options-form select {
-  width: 50%;
+  width: 100%;
   padding: 12px 20px;
   margin: 8px;
   display: inline-block;
@@ -68,21 +68,24 @@
 .options-form p {
   margin: 0;
   padding: 0;
-  margin-right: 10px;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   color: #333;
 }
 
 .options-form input[type="text"] {
-  width: 10%;
-  padding: 12px 10px;
+  width: auto;
+  min-width: 2ch;
+  max-width: 10ch;
   margin: 8px;
   display: inline-block;
   border: 1px solid;
   border-radius: 4px;
   box-sizing: border-box;
+  font-size: 30px;
+  text-align: center;
 }
+
 
 .options-form button {
   width: 10%;
@@ -90,6 +93,7 @@
   color: white;
   padding: 14px 0px;
   margin: 8px;
+  margin-left: 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
